--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,8 @@
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
               "node_modules/sweetalert2/src/sweetalert2.scss",
-              "src/styles.scss"
+              "src/styles.scss",
+              "./node_modules/bootstrap/scss/bootstrap.scss"
             ],
             "scripts": []
           },
